--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ containers/synapse/*
 !containers/synapse/localhost.signing.key
 !containers/synapse/localhost.log.config
 !containers/synapse/homeserver.yaml
+/target
+dist
+/node_modules
